--- a/example.bib
+++ b/example.bib
@@ -211,7 +211,7 @@
     journal = {Faraday Discuss.},
     year = {2009},
     volume = {141},
-    pages = {221-229}
+    pages = {221--229},
     issue  ="0",
     publisher  ="The Royal Society of Chemistry",
     doi  ="10.1039/B806516K",
@@ -350,7 +350,7 @@
     doi = {10.1021/jp800816a},
     url = {https://pubs.acs.org/doi/abs/10.1021/jp800816a}
 }
-@ARTICLE{Weissenborn95,
+@ARTICLE{Weissenborn1995,
     author = {P. K. Weissenborn and R. J. Pugh},
     title = {{Surface Tension and Bubble Coalescence Phenomena of Aqueous Solutions of Electrolytes}},
     journal = {Langmuir},
@@ -361,7 +361,7 @@
     doi = {10.1021/la00005a002},
     url = {https://pubs.acs.org/doi/abs/10.1021/la00005a002}
 }
-@Article{Hey81,
+@Article{Hey1981,
     author ="Hey, Michael J. and Shield, David W. and Speight, Janet M. and Will, Malcolm C.",
     title  ="Surface Tensions of Aqueous Solutions of Some 1:1 Electrolytes",
     journal  ="J. Chem. Soc.{,} Faraday Trans. 1",
@@ -374,7 +374,7 @@
     url  ="http://dx.doi.org/10.1039/F19817700123",
     abstract  ="Measurements of the surface tension of aqueous solutions of NaF{,} KF{,} NaNO and KNO have been made by means of the ring detachment method. The data were obtained for a range of concentrations and temperatures and analysed using the Gibbs equation. A simple model is proposed which explains the correlation found between the surface-tension data and the standard hydration enthalpies of the salts."
 }
-@article{Jarvis68,
+@article{Jarvis1968,
     abstract = {The effect of added electrolytes on the surface potential of water was determined using the radioactive-electrode technique. Changes in surface potential, $\Delta$V, were found to vary from 64 mv for Na2SO4 at 1.8 m to -180 mv for NaSCN at 7.5 m. The group Ia chlorides in water gave surface-potential differences that decreased in the order K+ = NH4+ {\textgreater} Na+ {\textgreater} Li+, while the surface potentials of the group IIa cations decreased in the order Ba2+ {\textgreater} Sr2+ {\textgreater} Mg2+. At a constant anion concentration of 2 m, the surface-potential differences due to the sodium salts were in the order SO42- {\textgreater} CO32- {\textgreater} CH3COO- {\textgreater} Cl- {\textgreater} NO3- {\textgreater} Br- {\textgreater} I- {\textgreater} SCN-. In general, the anion with the smaller hydration energy gave the greatest decrease in surface potential. The magnitude of each surface-potential change, however, does not appear to be a simple function of the hydration energy. The surface-potential changes must also involve the orientation and structure of the water molecules at the water-air interface, which may be only partially dependent upon the ionic properties as determined in bulk solution.},
     author = {Jarvis, N. L. and Scheiman, M. A.},
     doi = {10.1021/j100847a014},
@@ -387,7 +387,7 @@
     volume = {72},
     year = {1968}
 }
-@article{Jarvis72,
+@article{Jarvis1972,
     author = {Jarvis, N L},
     keywords = {http://dx.doi.org/10.1029/JC077i027p05177, doi:10.1029/JC077i027p05177, Meteorology, Oceanography},
     number = {27},
@@ -1034,6 +1034,8 @@ URL = {https://doi.org/10.1063/1.464521},
     year = {1999},
     volume = {82},
     number = {11},
+    url={https://doi.org/10.1103/PhysRevLett.82.2294},
+    doi={10.1103/PhysRevLett.82.2294},
     pages = {2294}
 }
 @BOOK{HJCB81,
@@ -1056,6 +1058,7 @@ URL = {https://doi.org/10.1063/1.464521},
     journal = {J. Structural Chem.},
     year = {2009},
     volume = {50},
+    url={https://link.springer.com/content/pdf/10.1007/s10947-009-0010-6.pdf},
     pages = {78-89}
 }
 @ARTICLE{Naberukhin2009,
@@ -1119,7 +1122,7 @@ URL = {https://doi.org/10.1063/1.464521},
     year  ="1996",
     volume  ="103",
     issue  ="0",
-    pages  ="29-40",
+    pages  ="29--40",
     publisher  ="The Royal Society of Chemistry",
     doi  ="10.1039/FD9960300029",
     url  ="http://dx.doi.org/10.1039/FD9960300029",
@@ -1196,20 +1199,14 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {71},
     pages = {2056-2063}
 }
-@ARTICLE{GL99,
-    author = {G. Lippert and J. Hutter and M. Parrinello},
-    title = {{The Gaussian and Augmented-Plane-Wave Density Functional Method for Ab Initio Molecular Dynamics Simulations}},
-    journal = {Theor. Chem. Acc.},
-    year = {1999},
-    volume = {103},
-    pages = {124}
-}
 @ARTICLE{MK05,
     author = {M. Krack},
     title = {{Pseudopotentials for H to Kr Optimized for Gradient-Corrected Exchange-Correlation Functionals}},
     journal = {Theor. Chem. Acc.},
     year = {2005},
     volume = {114},
+    doi={10.1007/s00214-005-0655-y},
+    url={https://doi.org/10.1007/s00214-005-0655-y},
     pages = {145}
 }
 @ARTICLE{SWR02,
@@ -1569,10 +1566,8 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
   volume = {66},
   issue = {4},
   pages = {041203},
-  numpages = {7},
   year = {2002},
   month = {Oct},
-  publisher = {American Physical Society},
   doi = {10.1103/PhysRevE.66.041203},
   url = {https://link.aps.org/doi/10.1103/PhysRevE.66.041203}
 }
@@ -1596,6 +1591,7 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     url = {https://ui.adsabs.harvard.edu/abs/1998JChPh.109.7737S},
     pages = {7737--7744}
 }
+#MFK
 @ARTICLE{Kropman2001,
     author = {M. F. Kropman and H. J. Bakker},
     title = {{Negligible Effect of Ions on the Hydrogen-Bond Structure in Liquid Water}},
@@ -1621,6 +1617,8 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     journal = {J. Chem. Phys.},
     year = {2007},
     volume = {127},
+    url={https://doi.org/10.1063/1.2770708},
+    doi={10.1063/1.2770708},
     pages = {114105}
 }
 @ARTICLE{RMN02,
@@ -1660,14 +1658,6 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     year = {2008},
     volume = {77},
     pages = {115123}
-}
-@ARTICLE{AGL05,
- author = {A. G. Lambert and P. B. Davies and D. J. Neivandt},
-    title = {{Implementing the Theory of Sum Frequency Generation Vibrational Spectroscopy: A Tutorial Review}},
-    journal = {Applied Spectroscopy Reviews}, 
-    year = {2005},
-    volume = {40:2},
-    pages = {103-145}
 }
 @article{Pulay69,
     author = {Pulay, P},
@@ -1929,14 +1919,18 @@ title = {{Vibrational Spectroscopy as a Probe of Structure and Dynamics in Liqui
 journal = {Chem. Rev.},
 year = {2010},
 volume = {110},
+doi={10.1021/cr9001879},
+url={https://doi.org/10.1021/cr9001879}
 pages = {1498}
 } 
 @ARTICLE{Auer08,
 author = {B. M. Auer and J. L. Skinner},
-title = {{ IR and Raman Spectra of Liquid Water: Theory and Interpretation }},
+title = {{IR and Raman Spectra of Liquid Water: Theory and Interpretation }},
 journal = {J. Chem. Phys.},
 year = {2008},
 volume = {128},
+url={https://pubmed.ncbi.nlm.nih.gov/18554033},
+doi={10.1063/1.2925258},
 pages = {224511}
 }  
 @ARTICLE{Auer07,
@@ -1946,6 +1940,8 @@ journal = {Proc. Natl. Acad. Sci. USA},
 year = {2007},
 volume = {104},
 number = {36},
+doi={10.1073/pnas.0701482104},
+url={https://doi.org/10.1073/pnas.0701482104},
 pages = {14215--14220}
 }  
 @ARTICLE{Yang10,
@@ -1992,14 +1988,6 @@ pages = {982}
     volume = {46},
     pages = {12019}
 }
-@ARTICLE{TianCS11,
-author = {C. S. Tian and S. J. Byrnes and H. L. Han and Y. R. Shen},
-title = {{Surface Propensities of Atmospherically Relevant Ions in Salt Solutions Revealed by Phase-Sensitive Sum Frequency Vibrational Spectroscopy}},
-journal = {J. Phys. Chem. Lett.},
-year = {2011},
-volume = {2(15)},
-pages = {1946-1949}
-} 
 @ARTICLE{Ball05,
 author = {P. Ball},
 title = {{Seeking the Solution}},
@@ -2482,21 +2470,6 @@ volume = "288",
 pages = "301",
 year = "2000",
 author = "E. M. Knipping and M. J. Lakin and K. L. Foster and P. Jungwirth and D. J. Tobias and R. B. Gerber and D. Dabdub and B. J. Finlayson-Pitts",
-abstract = "A combination  of  experimental,  molecular  dynamics,  and  kinetics  modeling
-        studies is applied to a system of concentrated aqueous sodium chloride particles
-        suspended in air at room temperature with ozone, irradiated at 254 nanometers
-        to generate hydroxyl radicals. Measurements of the observed gaseous molec-
-        ular chlorine product are explainable only if reactions at the air-water interface
-        are  dominant.  Molecular  dynamics  simulations  show  the  availability  of  sub-
-        stantial amounts of chloride ions for reaction at the interface, and quantum
-        chemical calculations predict that in the gas phase chloride ions will strongly
-        attract  hydroxl  radicals.  Model  extrapolation  to  the  marine  boundary  layer
-        yields daytime chlorine atom concentrations that are in good agreement with
-        estimates based on field measurements of the decay of selected organics over
-        the Southern Ocean and the North Atlantic. Thus, ion-enhanced interactions
-        with gases at aqueous interfaces may play a more generalized and important
-        role in the chemistry of concentrated inorganic salt solutions than was pre-
-        viously recognized.",
 }
 @Article{Fornaro2015,
     author ="Fornaro, Teresa and Biczysko, Malgorzata and Monti, Susanna and Barone, Vincenzo",
@@ -3007,17 +2980,6 @@ volume="113",
 pages="2082-2087 ",
 url=""
 }
-@ARTICLE{Otten2007,
-    author="Otten, D. E. and Petersen, P. B. and Saykally, R. J.",
-    title={{Observation of Nitrate Ions at the Air/Water Interface by UV-Second Harmonic Generation}},
-    journal="Chem. Phys. Lett.",
-    year="2007",
-    volume="449",
-    issue = {4-6},
-    doi = {10.1016/j.cplett.2007.10.081},
-    url = {https://www.sciencedirect.com/science/article/abs/pii/S0009261407014017},
-    pages={261-265}
-}
 @Article{mundy_ann_rev13,
 author="Douglas J. Tobias and Abraham C. Stern and Marcel D. Baer and  Yan Levin and C.J. Mundy",
 title=" ",
@@ -3350,14 +3312,6 @@ URL = {https://doi.org/10.1063/5.0007045}
     year = {2010},
     publisher ={Oxford University Express}
 } 
-@ARTICLE{MFK01,
-    author = {M. F. Kropman and H. J. Bakker},
-    title = {{Negligible effect of ions on the hydrogen-bond structure in liquid water}},
-    journal = {Science},
-    year = {2001},
-    volume = {291},
-    pages = {2118}
-}
 #HL12
 @ARTICLE{LiH2012,
     author = {H. Li and X. C. Zeng},
@@ -3459,7 +3413,24 @@ in gas and condensed phases}},
     journal = {Science},
     year = {2000},
     volume = {288},
-    pages = {301-306}
+    pages = {301-306},
+    doi = {10.1126/science.288.5464.301},
+    url = {https://www.science.org/doi/full/10.1126/science.288.5464.301},
+    abstract = {A combination  of  experimental,  molecular  dynamics,  and  kinetics  modeling
+        studies is applied to a system of concentrated aqueous sodium chloride particles
+        suspended in air at room temperature with ozone, irradiated at 254 nanometers
+        to generate hydroxyl radicals. Measurements of the observed gaseous molec-
+        ular chlorine product are explainable only if reactions at the air-water interface
+        are  dominant.  Molecular  dynamics  simulations  show  the  availability  of  sub-
+        stantial amounts of chloride ions for reaction at the interface, and quantum
+        chemical calculations predict that in the gas phase chloride ions will strongly
+        attract  hydroxl  radicals.  Model  extrapolation  to  the  marine  boundary  layer
+        yields daytime chlorine atom concentrations that are in good agreement with
+        estimates based on field measurements of the decay of selected organics over
+        the Southern Ocean and the North Atlantic. Thus, ion-enhanced interactions
+        with gases at aqueous interfaces may play a more generalized and important
+        role in the chemistry of concentrated inorganic salt solutions than was pre-
+        viously recognized.},
 }
 @ARTICLE{Oum98,
  author = {K. W. Oum and M. J. Lakin and D. O. Dehaan and T. Brauer and B. J. Finlayson-Pitts},
@@ -3523,6 +3494,8 @@ year = {2010},
 volume = {114},
 number = {5},
 pages = {1954},
+doi={10.1021/jp909219k},
+url={https://doi.org/10.1021/jp909219k},
 abstract={{We describe and illustrate a simple procedure for identifying a liquid interface from atomic coordinates. In particular, a coarse-grained density field is constructed, and the interface is defined as a constant density surface for this coarse-grained field. In applications to a molecular dynamics simulation of liquid water, it is shown that this procedure provides instructive and useful pictures of liquid-vapor interfaces and of liquid-protein interfaces. }}
 }
 @ARTICLE{Harris90,
@@ -3539,14 +3512,14 @@ pages = {5-16}
 author = {A. L. Harris  and L. Rothberg and  L. H. Dubois  and N. J. Levinos and L. Dhar},
 title = {{Molecular Vibrational Energy Relaxation at Metal Surfaces by Picosecond Infrared-Visible Sum Spectroscopy}},
 journal = {International Quantum Electronics Conference},
-%journal = {XVII International Conference on Quantum Electronics. Digest of},
 keywords = {Energy transfer; Molecules; Nonlinear susceptibility; Sum frequency generation; Surface measurements; Surfaces},
 pages = {QTHK1},
-%pages = {256},
 publisher = {Optical Society of America},
 year = {1990},
 url = {http://www.osapublishing.org/abstract.cfm?URI=IQEC-1990-QTHK1},
 abstract = {Time-domain experiments to establish vibrational energy relaxation mechanisms for adsorbates at surfaces are carried out using transient sum frequency generation (SFG). An intense resonant (IR) pump pulse vibrationally excites molecules at the surface. The subsequent population relaxation is followed by monitoring the SFG signal from a delayed pair of synchronized picosecond IR and visible probe pulses.},
+%journal = {XVII International Conference on Quantum Electronics. Digest of},
+%pages = {256},
 }
 @BOOK{DaiHL95,
     author = {H.-L. Dai and W. Ho},
@@ -3567,7 +3540,9 @@ abstract = {Time-domain experiments to establish vibrational energy relaxation m
     journal = {Polymer International},
     year = {2007},
     volume = {56(5)},
-    pages = {577-587},
+    pages = {577--587},
+    doi={10.1002/pi.2201},
+    url={https://doi.org/10.1002/pi.2201},
     abstract= {{ This paper reviews recent progress in the studies on polymer surfaces/interfaces using sum frequency generation (SFG) vibrational spectroscopy. SFG theory, technique, and some experimental details have been presented. The review is focused on the SFG studies on buried interfaces involving polymer materials, such as polymer–water interfaces and polymer–polymer interfaces. Molecular interactions between polymer surfaces and adhesion promoters as well as biological molecules such as proteins and peptides have also been elucidated using SFG. This review demonstrates that SFG is a powerful technique to characterize molecular level structural information of complicated polymer surfaces and interfaces in situ . Copyright © 2006 Society of Chemical Industry}}
 }
 @BOOK{Wieckowski99,
@@ -3736,7 +3711,9 @@ title = {{Molecular Imaging and Local Density of States Characterization at the 
 journal = { Phys. Rev. Lett.},
 year = {1996},
 volume = {77},
-pages = {1986}
+pages = {1986},
+doi={10.1103/PhysRevLett.77.1986},
+url={https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.77.1986}
 }
 @ARTICLE{Velasco-Velez14,
 author = {J.-J. Velasco-Velez and C. H. Wu and T. A. Pascal and L. F. Wan and J. Guo and D. Prendergast and M. Salmeron},
@@ -3744,7 +3721,9 @@ title = {{The Structure of Interfacial Water on Gold Electrodes Studied by x-ray
 journal = {Science},
 year = {2014},
 volume = {346},
-pages = {831}
+pages = {831},
+doi={10.1126/science.1259437},
+url={https://www.science.org/doi/full/10.1126/science.1259437}
 }
 @ARTICLE{Laage2006,
 author = {D. Laage and J. T. Hynes},
@@ -3831,7 +3810,9 @@ title = {{Free Volume and Entropy in Condensed Systems I. General Principles, Fl
 journal = {J. Chem. Phys.},
 year = {1945},
 volume = {13},
-pages = {478}
+pages = {478},
+url={https://doi.org/10.1063/1.1723983},
+doi={10.1063/1.1723983}
 }
 @ARTICLE{Frank45b,
 author = {H. S. Frank},
@@ -3840,7 +3821,9 @@ Vaporization in Liquids and the Pictorial Theory of the Liquid State}},
 journal = {J. Chem. Phys.},
 year = {1945},
 volume = {13},
-pages = {493}
+pages = {493},
+url={https://doi.org/10.1063/1.1723984},
+doi={10.1063/1.1723984}
 }
 @ARTICLE{Frank45c,
 author = {H. S. Frank and M. W. Evans },
@@ -3850,7 +3833,9 @@ Thermodynamics in Aqueous Electrolytes}},
 journal = {J. Chem. Phys.},
 year = {1945},
 volume = {13},
-pages = {507}
+pages = {507},
+doi={10.1063/1.1723985},
+url={https://doi.org/10.1063/1.1723985}
 }
 @ARTICLE{Frumkin24b,
 author = { A. N. Frumkin},
@@ -3917,7 +3902,7 @@ abstract= {{ }}
     journal = {Chem Phys. Lett.},
     year = {1987},
     volume = {141},
-    pages = {350-356},
+    pages = {350--356},
     doi = {10.1016/0009-2614(87)85037-6},
     url = {https://www.sciencedirect.com/science/article/abs/pii/0009261487850376},
     abstract= {{ }}
@@ -4250,14 +4235,6 @@ year = {2000},
 volume = {2},
 pages = {2105--2122}
 }
-@ARTICLE{Lippert99,
-author = {G. Lippert and J. Hutter and M. Parrinello},
-title = {{The Gaussian and augmented-plane-wave density functional method for ab initio molecular dynamics simulations}},
-journal = {Theor. Chem. Acc.},
-year = {1999},
-volume = {103},
-pages = {124--140}
-}
 @ARTICLE{Ruuska04,
 author = {Henna Ruuska and Tapani A. Pakkanen and Richard L. Rowley},
 title = {{MP2 Study on Water Adsorption on Cluster Modles of Cu(111)}},
@@ -4465,6 +4442,8 @@ pages={12910}
     year = {2017},
     volume = {121},
     pages = "9032--9044",
+    doi={10.1021/acs.jpcb.7b06809},
+    url={https://doi.org/10.1021/acs.jpcb.7b06809}
 }
 @ARTICLE{Bajaj2016,
   abstract = {{Despite recent progress, a unified understanding of how ions affect the structure and dynamics of water across different phases remains elusive. Here, we report the development of full-dimensional many-body potential energy functions, called MB-nrg (Many-Body-energy), for molecular simulations of halide ion–water systems from the gas phase to the condensed phase. The MB-nrg potentials are derived entirely from “first-principles” calculations carried out at the F12 explicitly correlated coupled-cluster level including single, double, and perturbative triple excitations, CCSD(T)-F12, in the complete basis set limit. Building upon the functional form of the MB-pol water potential, the MB-nrg potentials are expressed through the many-body expansion of the total energy in terms of explicit contributions representing one-body, two-body, and three-body interactions, with all higher-order contributions being described by classical induction. The specific focus of this study is on the MB-nrg two-body terms representing the full-dimensional potential energy surfaces (PESs) of the corresponding H2O–X– dimers, with X–= F–, Cl–, Br–, and I–. The accuracy of the MB-nrg PESs is systematically assessed through extensive comparisons with results obtained using both ab initio models and polarizable force fields for energies, structures, and harmonic frequencies of the H2O–X– dimers.}},
@@ -4678,7 +4657,9 @@ year = {1984}
     journal = {Computer Physics Commutations},
     year = {2004},
     volume = {167},
-    pages = {103-128}
+    doi={10.1016/j.cpc.2004.12.014},
+    url={https://doi.org/10.1016/j.cpc.2004.12.014},
+    pages = {103--128}
 }
 @ARTICLE{Segall2002,
     author = {M. D. Segall and P. J. Lindan},
@@ -4770,15 +4751,6 @@ Quality},
     volume = {112},
     pages = {9428--9436}
 }
-@ARTICLE{Weissenborn95,
-    author = {P. K. Weissenborn and R. J. Pugh},
-    title = {{Surface Tension and Bubble Coalescence Phenomena of Aqueous Solutions of Electrolytes}},
-    journal = {Langmuir},
-    year = {1995},
-    volume = {11},
-    number = {5},
-    pages = {1422--1426}
-}
 @ARTICLE{Hey81,
     author = {M. J. Hey and D. W. Shield and J. M. Speight and M. C. Will},
     title = {{Partitioning of Atmospherically Relevant Ions between Bulk Water and the Water/Vapor Interface}},
@@ -4786,22 +4758,6 @@ Quality},
     year = {1981},
     volume = {I 77},
     pages = {123--128}
-}
-@ARTICLE{Jarvis68,
-    author = {N. L. Jarvis and M. A. Scheiman},
-    title = {{Surface Potentials of Aqueous Electrolyte Solution}},
-    journal = {J. Phys. Chem},
-    year = {1968},
-    volume = {72},
-    pages = {74--78}
-}
-@ARTICLE{Jarvis72,
-    author = {N. L. Jarvis},
-    title = {{Effect of Various Salts on the Surface Potential of Water-Air Interface}},
-    journal = {J. Geophys. Research},
-    year = {1972},
-    volume = {77},
-    pages = {5177--5182}
 }
 @ARTICLE{Marechal11,
     author = {Y. Marech\'{a}l},
@@ -5134,7 +5090,9 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     journal = {Nature},
     year = {1996},
     volume = {379},
-    pages = {55-57},
+    pages = {55--57},
+    doi={10.1038/379055a0},
+    url={https://doi.org/10.1038/379055a0},
     abstract = "Simulations have revealed that on long timescales the relaxation behaviour of HBs in liquid water exhibit non-exponential kinetics.
     , suggesting that bond making and breaking are not simple processes characterized by well defined rate constants.
     Here we show that these kinetics can be understood in terms of an interplay between diffusion and HB dynamics. 
@@ -5188,14 +5146,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     year = {1996},
     volume = {71},
     pages = {2056-2063}
-}
-@ARTICLE{GL99,
-    author = {G. Lippert and J. Hutter and M. Parrinello},
-    title = {{The Gaussian and augmented-plane-wave density functional method for ab initio molecular dynamics simulations}},
-    journal = {Theor. Chem. Acc.},
-    year = {1999},
-    volume = {103},
-    pages = {124}
 }
 @ARTICLE{MK05,
     author = {M. Krack},
@@ -5358,7 +5308,9 @@ journal = "Int. Rev. Phys. Chem.",
 year = {2010},
 volume = {19},
 number = {1},
-pages = "123-153"
+pages = "123--153",
+doi={10.1080/014423500229882},
+url={https://doi.org/10.1080/014423500229882}
 }
 @ARTICLE{DT08,
     author = {D. Tobias and J. C. Hemminger},
@@ -5519,14 +5471,6 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     volume = {109},
     pages = {7737}
 }
-@ARTICLE{MFK01,
-    author = {M. F. Kropman and H. J. Bakker},
-    title = {{Negligible Effect of Ions on the Hydrogen-Bond Structure in Liquid Water}},
-    journal = {Science},
-    year = {2001},
-    volume = {291},
-    pages = {2118}
-}
 @ARTICLE{HL12,
     author = {H. Li and X. C. Zeng},
     title = {{Two Dimensional Epitaxial Water Adlayer on Mica with Graphene Coating: An ab Initio Molecular Dynamics Study}},
@@ -5581,7 +5525,9 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     journal = {Applied Spectroscopy Reviews}, 
     year = {2005},
     volume = {40:2},
-    pages = {103-145}
+    doi={10.1081/ASR-200038326},
+    url={https://doi.org/10.1081/ASR-200038326},
+    pages = {103--145}
 }
 @ARTICLE{Mas96,
     author = {E. M. Mas and K. Szalewicz},
@@ -5990,14 +5936,6 @@ journal = {Chem. Rev.},
 year = {2002},
 volume = {102},
 pages = {2693-2724}
-}
-@ARTICLE{Harris87,
-author = {A. L. Harris and C. E. D. Chidsey and N. J. Levionos and D. N. Loiacono},
-title = {{Monolayer Vibrational Spectroscopy by Infrared-Visible Sum Generation at Metal and Semiconductor Surfaces}},
-journal = {Chem Phys. Lett.},
-year = {1987},
-volume = {141},
-pages = {350-356}
 }
 @article{LYH83,
 author = "L.-Y. Hsu and C. E. Nordman",
@@ -6605,15 +6543,6 @@ volume="113",
 pages="2082--2087 ",
 url=""
 }
-@Article{saykally07,
-author="Otten, Dale E. and Petersen, Poul B. and Saykally, Richard J.",
-title={{Observation of Nitrate Ions at the Air/Water Interface by UV-Second Harmonic Generation}},
-journal="Chem. Phys. Lett.",
-year="2007",
-volume="449",
-issue = {4-6},
-pages={261--265}
-}
 @Article{mundy_ann_rev13,
 author="Douglas J. Tobias and Abraham C. Stern and Marcel D. Baer and  Yan Levin and C.J. Mundy",
 title=" ",
@@ -6818,7 +6747,7 @@ year = {1984}
     volume = {102},
     pages = {107}
 }
-@ARTICLE{beck2011,
+@ARTICLE{Beck2011,
     author = {J. P. Beck and J. M. Lisy},
     title = {{Infrared Spectroscopy of Hydrated Alkali Metal Cations: Evidence of Multiple Photon Absorption}},
     journal = {J. Chem. Phys.},
@@ -6826,13 +6755,15 @@ year = {1984}
     volume = {135},
     pages = {044302}
 }
-@ARTICLE{DEO07,
+@ARTICLE{Otten2007,
     author = {D. E. Otten and P. B. Petersen and R. Saykally},
     title = {{Observation of Nitrate Ions at the Air/Water Interface by UV-Second Harmonic Generation}},
     journal = {J. Chem. Phys. Lett.},
     year = {2007},
     volume = {449},
-    issue = {4-6},
+    issue = {4--6},
+    doi = {10.1016/j.cplett.2007.10.081},
+    url = {https://www.sciencedirect.com/science/article/abs/pii/S0009261407014017},
     pages = {261--265}
 }
 @ARTICLE{MS08,
@@ -7189,15 +7120,6 @@ volume = {45},
 pages = {885},
 abstract= {{ }}
 }
-@ARTICLE{Harris87,
-author = {A. L. Harris and C. E. D. Chidsey and N. J. Levionos and D. N. Loiacono},
-title = {{Monolayer vibrational spectroscopy by infrared-visible sum generation at metal and semiconductor surfaces}},
-journal = { Chem Phys. Lett.},
-year = {1987 },
-volume = {141},
-pages = {350--356},
-abstract= {{ }}
-}
 @ARTICLE{Superfine88,
 author = {R. Superfine and P. Guyot-Sionnest and J. H. Hunt and C. T. Kao and Y. R. Shen},
 title = {{Surface vibrational spectroscopy of molecular adsorbates on metals and semiconductors by infrared-visible sum-frequency generation}},
@@ -7465,13 +7387,15 @@ year = {2000},
 volume = {2},
 pages = {2105-2122}
 }
-@ARTICLE{Lippert99,
+@ARTICLE{Lippert1999,
 author = {G. Lippert and J. Hutter and M. Parrinello},
 title = {{The Gaussian and augmented-plane-wave density functional method for ab initio molecular dynamics simulations}},
 journal = {Theor. Chem. Acc.},
 year = {1999},
 volume = {103},
-pages = {124-140}
+doi={10.1007/s002140050523},
+url={https://doi.org/10.1007/s002140050523},
+pages = {124--140}
 }
 @ARTICLE{Ruuska04,
 author = {Henna Ruuska and Tapani A. Pakkanen and Richard L. Rowley},
@@ -7870,14 +7794,16 @@ doi = {dx.doi.org/10.1021/jz200591v},
 URL = {https://pubs.acs.org/doi/abs/10.1021/jz200591v}
 }
 @ARTICLE{Chanda2006,
-author = {Chanda, J. and Bandyopadhyay, S.},
-title = {{Hydrogen Bond Lifetime Dynamics at the Interface of a Surfactant Monolayer}},
-journal = {J. Phys. Chem. B},
-year = {2006},
-volume = {110},
-number ={46},
-pages = {23443-23449},
-abstract= {{It is observed that the water molecules present in the first hydration layer form strong hydrogen bonds with the surfactant headgroups and hence have longer lifetimes. It is further noticed that water molecules beyond the first hydration layer form weaker hydrogen bonds than pure bulk water. SW HB and WW HB dynamics are studied. }}
+  author = {Chanda, J. and Bandyopadhyay, S.},
+  title = {{Hydrogen Bond Lifetime Dynamics at the Interface of a Surfactant Monolayer}},
+  journal = {J. Phys. Chem. B},
+  year = {2006},
+  volume = {110},
+  number ={46},
+  pages = {23443--23449},
+  doi={10.1021/jp065203},
+  url={https://doi.org/10.1021/jp065203},
+  abstract= {{It is observed that the water molecules present in the first hydration layer form strong hydrogen bonds with the surfactant headgroups and hence have longer lifetimes. It is further noticed that water molecules beyond the first hydration layer form weaker hydrogen bonds than pure bulk water. SW HB and WW HB dynamics are studied. }}
 }
 @article{Pettersson2015,
 title = "The Structure of Water: from Ambient to Deeply Supercooled",
@@ -7972,9 +7898,9 @@ title = {Quickstep: Fast and Accurate Density Functional Calculations using a Mi
 journal = {Comput. Phys. Commun.},
 volume = {167},
 number = {2},
-pages = {103-128},
+pages = {103--128},
 year = {2005},
-issn = {0010-4655},
+issn = {0010--4655},
 }
 @ARTICLE{Pegram06,
 title ={Partitioning of Atmospherically Relevant Ions between Bulk Water and the Water/Vapor Interface},
@@ -7983,18 +7909,18 @@ volume = {103},
 number = {39},
 pages = {14278},
 year = {2006},
-doi = "",
-url = " ",
-author ={L. M. Pegram and M. T. Record,Jr.},
-abstract = "",
+doi = "10.1073/pnas.0606256103",
+url = "https://doi.org/10.1073/pnas.0606256103",
+author ={L. M. Pegram and M. T. Record,Jr.}
 }
 @ARTICLE{Pegram08,
-title = " Thermodynamic Origin of Hofmeister Ion Effects ",
+title = "Thermodynamic Origin of Hofmeister Ion Effects ",
 journal = "J. Phys. Chem. B",
 volume = {112},
-number = "",
-pages = {9428-9436},
+pages = {9428--9436},
 year = {2008},
+doi={10.1021/jp800816a},
+url={https://doi.org/10.1021/jp800816a},
 author = "L. M. Pegram and M. T. Record,Jr.",
 }
 @ARTICLE{SFGwater2013,
@@ -8227,16 +8153,6 @@ volume="64",
 pages="339 ",
 url=""
 }
-@Article{otten07,
-author="Otten, Dale E. and Petersen, Poul B. and Saykally, Richard J.",
-title="Observation of Nitrate Ions at the Air/Water Interface by UV-Second Harmonic Generation",
-journal="Chem. Phys. Lett.",
-year="2007",
-publisher="",
-volume="449",
-pages="261-265 ",
-url=""
-}
 @Article{Ji2007,
 author="N. Ji and V. Ostroverkhov and C. Y. Chen and Y. R. Shen",
 title="Phase-Sensitive Sum-Frequency Vibrational Spectroscopy and Its Application
@@ -8276,15 +8192,18 @@ journal={Phys. Rev. A},
 year="1988",
 volume="38",
 pages="3098",
+doi={10.1103/PhysRevA.38.3098},
+url={https://doi.org/10.1103/PhysRevA.38.3098}
 } 
 @Article{LeeC1988,
 author={C. Lee and W. Yang and R. G. Parr},
-title={Development of the Colic-Salvetti Correlation-Energy Formula
-into a Functional of the Electron Density},
+title={Development of the Colic-Salvetti Correlation-Energy Formula into a Functional of the Electron Density},
 journal={Phys. Rev. B},
 year="1988",
 volume="37",
 pages="785",
+doi={10.1103/PhysRevB.37.785},
+url={https://doi.org/10.1103/PhysRevB.37.785}
 } 
 @Article{Lisy08,
 author={D. J. Miller and J. M. Lisy},
@@ -8436,14 +8355,6 @@ year="1992",
 volume="97",
 pages="2635",
 url=""
-} 
-@Article{Lippert1999,
-author={G. Lippert and J. Hutter and M. Parrinello},
-title={The Gaussian and Augmented-Plane-Wave Density Functional Method for Ab Initio Molecular Dynamics Simulations},
-journal={Theor. Chem. Acc.},
-year="1999",
-volume="103",
-pages="124",
 } 
 @ARTICLE{TI07,
 author = {Ishiyama, T. and Morita, A.},
@@ -8802,6 +8713,8 @@ title = {{Polarized Pump-probe Measurements of Electronic Motion via a Conical I
 journal = {J. Chem. Phys.},
 year = {2006},
 volume = {128},
+doi={10.1063/1.2837471},
+url={https://doi.org/10.1063/1.2837471},
 pages = {144510--144531}
 }
 @article{Zahariev13,
@@ -8876,6 +8789,8 @@ year = {1996},
 volume = {100},
 number ={},
 pages = {11720--11725},
+doi={10.1021/jp960615b},
+url={https://doi.org/10.1021/jp960615b},
 abstract= {{ MD simulations have been used to explore the structural and dynamical properties
 of water’s liquid/vapor interface using the simple extended point charge (SPC/E) model. Comparisons to the
 existing experimental and simulation data suggest that the SPC/E potential energy function provides a
@@ -8964,6 +8879,8 @@ year = {2013},
 volume = {117},
 number ={4},
 pages = {1780--1790},
+doi={10.1021/jp310732f},
+url={https://doi.org/10.1021/jp310732f},
 abstract= {{Vibrational sum frequency spectroscopy (VSFS) has been used to study the structure of water in contact to fused silica surfaces, hydrophobically modified with a series of alkyl trichlorosilane monolayers of varying degrees of order. The interfacial molecular structural information was complemented using total internal reflection (TIR) Raman spectroscopy. The silane molecules consisted of octadecyltrichlorosilane (OTS) and its shorter chain analogue with eight carbon atoms. The VSF spectra show a direct correlation between monolayer order and the intensity of the free OH mode, characteristic of straddling water molecules vibrating in direct contact to the hydrophobic layer, with a concurrent reduction of the bands associated with hydrogen bonded water molecules. The results imply that the structure of water in the most ordered monolayers is not much affected beyond the first layer of water molecules, with bulk isotropic properties becoming apparent already at subnanometer distances from the surface. Contact angle measurements with both water and hexadecane were also performed in an effort to relate macroscopically measurable parameters to the molecular surface structure provided by VSFS and TIR Raman. Only the receding contact angles, and in particular those with hexadecane, were found to correlate with the monolayer order. Finally, to obtain an additional insight into the water structure in direct contact to an ordered hydrophobic surface, isotopic dilution experiments with D2O were also performed. They indicate that the vibrational coupling mechanism of water molecules at the hydrophobized solid/water interface is different from what has been observed at the liquid/vapor interface.}}
 }
 @article{Zeiss1977,
@@ -9049,9 +8966,7 @@ number = {21},
 pages = {214501},
 year = {2021},
 doi = {10.1063/5.0053445},
-URL = { 
-        https://doi.org/10.1063/5.0053445
-}}
+URL = {https://doi.org/10.1063/5.0053445}}
 @ARTICLE{Buckingham1968,
 author = {Buckingham, A. D. and Disch, R. L. and Dunmur, D. A.},
 title = {{Quadrupole Moments of Some Simple Molecules}},
@@ -9065,12 +8980,14 @@ url = {https://pubs.acs.org/doi/pdf/10.1021/ja01014a023}
 }
 @ARTICLE{Kim2009,
 author = {Kim,Yung Sam and Hochstrasser, Robin M.},
-title = {{Applications of 2D IR Spectroscopy to Peptides, Proteins, and Hydrogen-Bond Dynamics†}},
+title = {{Applications of 2D IR Spectroscopy to Peptides, Proteins, and Hydrogen-Bond Dynamics}},
 journal = {J. Phys. Chem. B} 
 year = {2009},
 volume = {113},
 pages ={8231--8251},
 number = {24},
+doi={10.1021/jp8113978},
+url={https://doi.org/10.1021/jp8113978},
 abstract= {{ }}
 }
 @ARTICLE{ZhangZhen2011,
@@ -9079,6 +8996,8 @@ title = {{Ultrafast Vibrational Energy Transfer at the Water/Air Interface Revea
 journal = {Nature Chem.},
 year = {2011},
 volume = {3},
+doi={10.1038/nchem.1158},
+url={https://www.nature.com/articles/nchem.1158},
 pages = {888--893}
 }
 @article{ChenSH1984,
@@ -9101,6 +9020,7 @@ journal = {J. Phys.: Condens. Matter},
 year = {1990},
 volume = {2},
 number ={SA},
+url={https://iopscience.iop.org/article/10.1088/0953-8984/2/S/011/meta},
 pages = {105--108}
 }
 @article{Tarek02,
@@ -9148,6 +9068,8 @@ year = {2016},
 volume = {49},
 number ={},
 pages = {731},
+url={https://doi.org/10.1021/acs.macromol.5b02294},
+doi={10.1021/acs.macromol.5b02294},
 abstract= {{ }}
 }
 @ARTICLE{HuXiaohu16,
@@ -9158,6 +9080,8 @@ year = {2016},
 volume = {12},
 number ={},
 pages = {171},
+url={https://doi.org/10.1038/nphys3553},
+doi={10.1038/nphys3553},
 abstract= {{ }}
 }
 @ARTICLE{ZhuL11,
@@ -9168,16 +9092,8 @@ year = {2011},
 volume = {106},
 number ={25},
 pages = {256103},
-abstract= {{ }}
-}
-@ARTICLE{Jarvis1968,
-author = {N. L. Jarvis and M. A. Scheiman},
-title = {{Surface potential of aqueous electrolyte solutions}},
-journal = {J. Phys. Chem.},
-year = {1968},
-volume = {72},
-number ={1},
-pages = {74},
+doi={10.1103/PhysRevLett.106.256103},
+url={https://doi.org/10.1103/PhysRevLett.106.256103￼},
 abstract= {{ }}
 }
 @ARTICLE{Langmuir1917,
@@ -9188,6 +9104,8 @@ year = {1917},
 volume = {39},
 number ={},
 pages = {1848},
+doi={10.1021/ja02254a006},
+url={https://doi.org/10.1021/ja02254a006},
 abstract= {{ }}
 }
 @ARTICLE{Onsager1934,
@@ -9329,7 +9247,8 @@ year = {1993},
 volume = {364},
 number ={},
 pages = {317},
-abstract= {{ }}
+doi={10.1038/364317a0},
+url={https://www.nature.com/articles/364317a0}
 }
 @ARTICLE{Craig1993b,
 author = {Craig, V. S. and Ninham, B. W. and Pashley, R. M.},
@@ -9339,16 +9258,8 @@ year = {1993},
 volume = {97},
 number ={},
 pages = {10192--10197},
-abstract= {{ }}
-}
-@ARTICLE{Weissenborn1995,
-author = {Weissenborn, P. K. and Pugh, R. J.},
-title = {{Surface tension and bubble coalescence phenomena of aqueous solutions of electrolytes}},
-journal = {Langmuir},
-year = {1995},
-volume = {11},
-number ={5},
-pages = {1422--1426}
+doi={10.1021/j100141a047},
+url={https://pubs.acs.org/doi/pdf/10.1021/j100141a047}
 }
 @ARTICLE{Marcelja04,
 author = {Mar\v{c}elja, S.},
@@ -9356,7 +9267,9 @@ title = {{Short-range forces in surface and bubble interaction}},
 journal = {Curr. Opin. Colloid Interface Sci.},
 year = {2004},
 volume = {9},
-pages = {165}
+pages = {165},
+doi={10.1016/j.cocis.2004.05.024},
+url={https://www.sciencedirect.com/science/article/pii/S1359029404000524}
 }
 @ARTICLE{Craig04,
 author = {Craig, V. S.},
@@ -9365,7 +9278,9 @@ journal = {Curr. Opin. Colloid Interface Sci.},
 year = {2004},
 volume = {9},
 number ={},
-pages = {178}
+pages = {178},
+doi={10.1016/j.cocis.2004.06.002},
+url={https://www.sciencedirect.com/science/article/pii/S1359029404000627}
 }
 @ARTICLE{Chang06,
 author = {Chang,Tsun-Mei and Dang, Liem X.},
