--- a/main.tex
+++ b/main.tex
@@ -361,14 +361,14 @@ To analyze the HB dynamics at interfaces,
 we determined the Willard-Chandler instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population operator for the instantaneous interface.
 Combining this method with Interfacial Molecule Sampling (IMS), we can get more realistic HB dynamics for the water/vapor interface.
-This combination of the two methods gives us a method to determine the thickness of the water/vapor interface from the perspective
+This combination gives us a method to determine the thickness of the water/vapor interface from the perspective
 of HB dynamics.
 
 %
 The IHB method is also extended to general interface systems, such as the solvation shells of ions in aqueous solutions.
 The difference between the HB dynamics in the first solvation shell of \Li and that of nitrate-water Hydrogen (H-) bonds
 at interfaces is not visible from the values of the HB relaxation time. 
-For the interface of alkaline iodide solutions, we also find that the cations does not alter the H-bonding network 
+For the interface of alkaline iodide solutions, we find that the cations does not alter the H-bonding network 
 outside the first solvation shell of the cations themselves.
 Through the solvation shell HB (SHB) dynamics, we obtained that 
 the HB dynamics for the H-bonds between water molecules in the first and the second solvation shell are not sensitive to the ions' nature.
@@ -458,8 +458,8 @@ I would like to thank the following teachers who have benefited me for life:
 Mr. Yiyou Li, Mr. Yongliang Lu,  
 Mr. Bing Yang, Mr. Jiexian Chen, Mr. Yiji Li, Mr. Jiangen Chen, Mr. Jian Liang, Mr. Zengquan Jiang, 
 Mr. Xiukui Wu, Mr. Wende Zhou, Mr. Wenfeng Chen, 
-Mr. Zhengzhou Yan, Mr. Pingchuan Xu, Ms. Ruibin Huang, Ms. Qiyin Ran, Mr. Yong Huang, Mr. Zhiquan Luo, Mr. Silin Fan, Mr. Caide Tao, Mr. Weiyi Ren, Mr. Weiping Li,
-Mr. Lei Tan, Mr. Yuxiao Liu, Mr. Jirong Ren, Mr. Honggang Luo.
+Mr. Zhengzhou Yan, Mr. Pingchuan Xu, Ms. Ruibin Huang, Ms. Qiyin Ran, Mr. Yong Huang, Mr. Zhiquan Luo, Mr. Silin Fan, Mr. Caide Tao, Mr. Weiping Li,
+Mr. Lei Tan, Mr. Yuxiao Liu, Mr. Honggang Luo.
 
 %
 I am grateful to my dear parents Yuhua Diao and Dehuai Huang, and my dear brother Jialiang, for their care, 
